syntax = "proto3";
package prodvana.protection;
option go_package = "github.com/prodvana/prodvana-public/go/prodvana-sdk/proto/prodvana/protection";

import "google/protobuf/duration.proto";
import "validate/validate.proto";
import "prodvana/common_config/task.proto";
import "prodvana/common_config/external_config.proto";
import "prodvana/runtimes/runtimes_config.proto";

enum AttachmentType {
    UNKNOWN = 0;
    RELEASE_CHANNEL = 1;
    SERVICE_INSTANCE = 2;
}

message ProtectionConfig {
    string name = 1 [
        (validate.rules).string = {
            min_len: 1,
            max_len: 63,
            pattern: '^[a-z]([a-z0-9-]*[a-z0-9]){0,1}$',
        }
    ];

    oneof exec_config {
        option (validate.required) = true;

        // Inline task config with retry, template support.
        prodvana.common_config.TaskConfig task_config = 2;

        prodvana.common_config.ExternalConfig external_config = 3;

        // Other options here:
        // - Ref to external repository of protection definitions.
    }

    // customize intervals instead of using Prodvana default
    // how often to run check even if it succeeds
    google.protobuf.Duration poll_interval = 4;
    // how long after a run has started to try another run if it has not completed yet
    google.protobuf.Duration timeout = 5;

    // TODO: Allow Protections to declare context/parameters/inputs that need to be bound before execution.
    // E.g., instance name for DB/bucket to be polled, duration/thresholds for post-push validation.
    //
    // repeated Parameter parameters = 3;
    //
    // message Parameter {
    //     string key = 1; // Token used in config that needs to be replaced
    //     string description = 2; // User-friendly description to be shown in the UI
    //     // Type?
    //     // Defaults?
    //     // See https://circleci.com/docs/reusing-config/#parameter-syntax
    // }
}

message CompiledProtectionAttachmentConfig {
    ProtectionConfig config = 1;

    // Protection source - where did this protection get attached from (service/app/org/...)?
    ProtectionAttachment attachment = 2;

    prodvana.runtimes.RuntimeExecutionConfig runtime_execution = 3;

    // TODO: Context/parameter/input bindings.
}

message ServiceInstanceAttachment {
    string service = 1;
    string release_channel = 2;
    string application = 3;
}

message ReleaseChannelAttachment {
    string application = 1;
    string release_channel = 2;
}

message ProtectionAttachment {
    oneof attachment {
        option (validate.required) = true;
        ServiceInstanceAttachment service_instance = 1;
        ReleaseChannelAttachment release_channel = 2;
    }
}
